# Media_Emotion_Pipeline

./: .deepsource.toml  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  STT_Assembly.csv  STT_Assembly.xlsx  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  tests.yml
data/: dataset_balanced.csv  kinga.csv  transcript_spell_checked.csv
data/bafa9743-ef7c-4411-bed8-cea1c8b430d4_youtube_audio_artifacts/: transcribed_data_whisper.csv
data/bbad42d9-8a53-423e-b612-ab8b8cff3dfc_youtube_audio_artifacts/: transcribed_data_assemblyAI.csv
docs/: model_card.md
experiments/baselines/: original_baseline.ipynb  prompt_engineering.ipynb
experiments/data/: dataset_balanced.csv  kinga.csv  merged_transcripts.csv  transcript_spell_checked.csv
experiments/data/bafa9743-ef7c-4411-bed8-cea1c8b430d4_youtube_audio_artifacts/: transcribed_data_whisper.csv
experiments/data/bbad42d9-8a53-423e-b612-ab8b8cff3dfc_youtube_audio_artifacts/: transcribed_data_assemblyAI.csv
experiments/explainability/: XAI.ipynb  lrp_cp_transformer.py
experiments/model_training/: Logistic_regression.ipynb  RNN.ipynb
experiments/model_training/lstm/: BiLSTM_combinedDS_bertEMBED_lexicons_metadata.ipynb  BiLSTM_combinedDS_word2vec.ipynb  BiLSTM_combinedDS_word2vec_lexicons_metadata.ipynb  BiLSTM_goemotion_word2vec.ipynb  BiLSTM_goemotion_word2vec_metadata.ipynb  (+1 more)
experiments/speech_to_text/: STT_Assembly.csv  STT_Whisper.xlsx
scripts/: run_mypy.py
src/emotion_detection_pipeline/: config.py  logger.py  main.py  pipeline.py
src/krzycz_trybson/: config.py  logger.py  main.py  pipeline.py
src/media_emotion_pipeline/: config.py  logger.py  main.py  pipeline.py
task10/: XAI.ipynb  lrp_cp_transformer.py
task11/: readme.md
task6/: Logistic_regression.ipynb  RNN.ipynb  Y2A_model_iteration_log.xlsx
task6/lstm/: BiLSTM_combinedDS_bertEMBED_lexicons_metadata.ipynb  BiLSTM_combinedDS_word2vec.ipynb  BiLSTM_combinedDS_word2vec_lexicons_metadata.ipynb  BiLSTM_goemotion_word2vec.ipynb  BiLSTM_goemotion_word2vec_metadata.ipynb  BiLSTM_goemotion_word2vec_pos.ipynb
task6/medals/: bronze.ipynb
task6/svm/: SVM_combinedDS_word2vec_lexicons_1vALL.ipynb  SVM_cpy.ipynb  SVM_goemotion_tfidf_metadata.ipynb  SVM_goemotion_word2vec_lexicons.ipynb  SVM_twitter_tfidf_metadata.ipynb
task6/torch_utils/: model_callbacks.py
task6/transformer/: RoBERTa_combinedDS_tokenizer.ipynb  roberta_misclassified_samples.csv
task6/utils/: balance_dataset.py  error_analysis.py  prepare_data.py
task7/opus_fixed/: en_sp.vocab  kinga_translations.csv  pl_sp.model  pl_sp.vocab  test_open_subs.ipynb
task8/: original_baseline.ipynb  prompt_engineering.ipynb
tests/: conftest.py  test_api.py  test_classifier.py  test_config_logger.py  test_pipeline.py  test_services.py  test_transcription_helpers.py
(+44 files in other folders)
