[tool.poetry]
name = "krzycz-trybson"
version = "0.1.0"
description = ""
authors = ["Szymon Chirowski <242621@buas.nl>"]
readme = "README.md"
packages = [{ include = "krzycz_trybson", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
poetry-core = "^2.1.3"
pydantic-settings = "^2.10.1"
llvmlite = ">=0.40.0"
numba = ">=0.56.0"
openai-whisper = "^20250625"
pandas = "^2.3.2"
pandas-stubs = "^2.3.2.250827"
numpy = "<2.0.0"
assemblyai = "^0.43.1"
typing-extensions = "^4.15.0"
yt-dlp = "^2025.8.27"
python-multipart = "^0.0.20"
scikit-learn = "^1.7.2"
nltk = "^3.9.1"
notebook = "^7.4.5"
sentencepiece = "^0.2.1"
language-tool-python = "^2.9.4"
transformers = "^4.57.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
black = "^25.1.0"
mypy = "^1.17.1"
pytest = "^8.4.1"
pre-commit = "^4.3.0"

# Black configuration
sqlalchemy-stubs = "^0.4"
pytest-cov = "^6.2.1"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu129"
priority = "explicit"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
    | migrations
)/
'''

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Exclude certain directories from mypy checking
exclude = [
    "^migrations/",
    "^.venv/",
    "^build/",
    "^dist/"
]

[tool.ruff]
line-length = 88
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "migrations",
    "build",
    "dist",
    "tests",
]
[tool.ruff.lint]
ignore = [
    "E203",  # handled by black
    "E501",  # black enforces line length
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
